--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ hr {
   border: 1px #555 solid;
 }
 #errorMsg {
-  color: #f63d3d;
+  color: #fbac0b;
   font-style: oblique;
   font-size: 14px;
 }
